--- a/functions/test-db/json2/scvo/partials/wee-search.hbs
+++ b/functions/test-db/json2/scvo/partials/wee-search.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card">
+<div class="mdc-card mdc-card-search">
     <section class="mdc-card__primary">
         <h2 class="mdc-card__title mdc-card__title--large">{{title}}</h2>
         <form [searchroute]="'{{searchRoute}}'">
