--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -18,7 +18,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 charity: (
 primary: #4527A0,
@@ -33,7 +33,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 jobs: (
 primary: #2e7d32,
@@ -48,7 +48,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 goodmoves: (
 primary: #58a934,
@@ -63,7 +63,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 funding: (
 primary: #00838F,
@@ -78,7 +78,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 projects: (
 primary: #AD1457,
@@ -93,7 +93,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 posts: (
 primary: #D84315,
@@ -108,7 +108,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 goodhq: (
 primary: #4033E9,
@@ -123,7 +123,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 digital-charter: (
 primary: #022347,
@@ -138,7 +138,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 tfn: (
 primary: #3b9db1,
@@ -153,7 +153,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 funding-scotland: (
 primary: #6FB744,
@@ -168,7 +168,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 credit-union: (
 primary: #1976D2,
@@ -183,7 +183,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 digital: (
 primary: #1976d2,
@@ -198,7 +198,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 ),
 services: (
 primary: #1565C0,
@@ -213,7 +213,7 @@ footer-primary: #371448,
 footer-primary-highlight: #B3185B,
 footer-primary-light: #592864,
 footer-primary-dark: #251032,
-site-background: #290b4d
+site-background: #251032
 )
 );
 
@@ -239,26 +239,24 @@ site-background: #290b4d
     blockquote {
         border-left-color: map-get($theme, 'primary') !important;
     }
-    .container-content {
+    .mdc-button {
+        color: map-get($theme, 'primary');
+        border-color: map-get($theme, 'primary');
+    }
+    .mdc-button:hover {
+        color: white;
+        border-color: map-get($theme, 'primary-dark');
+        background-color: map-get($theme, 'primary');
+    }
+    .splash-image {
         .mdc-button {
-            color: map-get($theme, 'primary');
-            border-color: map-get($theme, 'primary');
+            border-color: white !important;
+            color: white !important;
         }
         .mdc-button:hover {
-            color: white;
-            border-color: map-get($theme, 'primary-dark');
-            background-color: map-get($theme, 'primary');
-        }
-        .splash-image {
-            .mdc-button {
-                border-color: white !important;
-                color: white !important;
-            }
-            .mdc-button:hover {
-                background-color: white !important;
-                border-color: map-get($theme, 'primary-dark') !important;
-                color: map-get($theme, 'primary') !important;
-            }
+            background-color: white !important;
+            border-color: map-get($theme, 'primary-dark') !important;
+            color: map-get($theme, 'primary') !important;
         }
     }
 
@@ -295,6 +293,7 @@ site-background: #290b4d
     .mdc-theme--primary-bg {
         background-color: map-get($theme, 'primary');
     }
+    body,
     .mdc-theme--site-bg {
         background-color: map-get($theme, 'site-background');
     }
@@ -433,7 +432,8 @@ site-background: #290b4d
         .footer-copyright {
             background-color: map-get($theme, 'footer-primary-dark');
         }
-        a {
+        a,
+        a:hover {
             color: white;
         }
     }
@@ -466,6 +466,7 @@ site-background: #290b4d
 .projects-campaigns {
     @include theme-colours('projects');
 }
+.search-result.scvo-cms-post,
 .post,
 .blogs,
 .press-media,
@@ -497,6 +498,7 @@ site-background: #290b4d
     @include theme-colours('digital');
 }
 .services,
+.search-result.scvo-cms-page,
 .breadcrumbs,
 .page-content,
 .page-sidebar,
@@ -1233,6 +1235,7 @@ a:hover {
 }
 .splash-overlay,
 .splash-image {
+    overflow: hidden;
     position: relative;
     height: 25vh;
     min-height: $spacing-unit*9;
@@ -1370,6 +1373,9 @@ a:hover {
 .mdc-card__subtitle {
     font-weight: 600;
 }
+.mdc-card__subtitle .post-info-item {
+    font-weight: 500;
+}
 .mdc-card__title--large {
     font-size: 1.2rem;
     letter-spacing: normal;
@@ -1481,7 +1487,7 @@ h1.mdc-typography--title {
     }
 }
 .mdc-card__actions {
-    padding: $spacing-unit/2 $spacing-unit $spacing-unit;
+    padding: $spacing-unit/2 $spacing-unit $spacing-unit/2;
     .mdc-card__action {
         font-weight: 800;
     }
@@ -1521,11 +1527,23 @@ h1.mdc-typography--title {
     //     padding-bottom: 0;
     // }
 }
+.mdc-card__primary:last-child {
+    padding-bottom: 0;
+}
+.mdc-card-search {
+    margin: 0 0 $spacing-unit;
+    .mdc-card__primary {
+        padding-bottom: $spacing-unit;
+    }
+}
 .mdc-card__supporting-text {
     padding: 0 $spacing-unit $spacing-unit/2;
+    h4 {
+        margin-top: 0;
+    }
 }
 .scvo-cms-post .mdc-card__actions {
-    padding: $spacing-unit/2 $spacing-unit;
+    // padding: $spacing-unit/2 $spacing-unit;
     .post-info {
         padding: 0;
     }
@@ -1617,6 +1635,16 @@ h1.mdc-typography--title {
             top: 0em;
         }
     }
+    ul.fa-ul {
+        li {
+            padding-left: 0;
+        }
+        li::before {
+            content: " ";
+            padding: 0;
+            margin: 0;
+        }
+    }
     .mdc-button {
         background: white;
         border-width: $spacing-unit/8;
@@ -1662,9 +1690,9 @@ hr {
 
 ul.breadcrumbs {
     margin: 0 0 $spacing-unit/2;
-    padding: 0 0 $spacing-unit/2;
-    height: $nav-height;
-    line-height: $nav-height;
+    padding: $spacing-unit/2 0 $spacing-unit;
+    // height: $nav-height;
+    // line-height: $nav-height;
     list-style: none;
     border-bottom: 1px solid rgba(0,0,0,.2);
     font-size: 0;
@@ -1798,7 +1826,7 @@ ul.supplimentary-list {
         }
         .post-info {
             display: block;
-            margin-bottom: $spacing-unit/2;
+            // margin-bottom: $spacing-unit/2;
         }
     }
     li.supplimentary-list-item:not(:last-child){
@@ -1824,6 +1852,9 @@ h3,
 h4 {
     margin-bottom: $spacing-unit/4;
     font-weight: 600;
+    strong {
+        font-weight: 600;
+    }
 }
 p {
     margin: 0 0 $spacing-unit/2;
@@ -1845,7 +1876,7 @@ p:last-child {
     .post-info {
         margin: $spacing-unit/2 0 $spacing-unit*1.5;
         border-bottom: 1px solid rgba(0,0,0,.2);
-        padding: 0 0 $spacing-unit;
+        padding: 0 0 $spacing-unit/2;
     }
     .page-info {
         font-size: 0.9rem;
