--- a/functions/test-db/json2/scvo/templates/grant-charter.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-charter.hbs
@@ -20,8 +20,9 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
-            <li><a href="/digital/charter-fund">Charter fund</a></li>
-            <li><a href="/digital/charter-fund/projects">Projects</a></li>
+            <li><a href="/digital/participation">Participation</a></li>
+            <li><a href="/digital/participation/charter-fund">Charter fund</a></li>
+            <li><a href="/digital/participation/charter-fund/projects">Projects</a></li>
             <li>{{{primaryResponse.hits.hits.[0]._source.title}}}</li>
         </ul>
         <div class="mdc-layout-grid">
