--- a/functions/test-db/json2/scvo/templates/grant-cyber.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-cyber.hbs
@@ -20,8 +20,9 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
-            <li><a href="/digital/cyber-resilience">Cyber Resilience</a></li>
-            <li><a href="/digital/cyber-resilience/projects">Projects</a></li>
+            <li><a href="/digital/evolution">Evolution</a></li>
+            <li><a href="/digital/evolution/cyber-resilience">Cyber Resilience and Cyber Essentials Grants</a></li>
+            <li><a href="/digital/evolution/cyber-resilience/projects">Projects</a></li>
             <li>{{{primaryResponse.hits.hits.[0]._source.title}}}</li>
         </ul>
         <div class="mdc-layout-grid">
