--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -26,7 +26,7 @@
                     {{/with}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
-                    {{> wee_search title="Search blog posts" searchRoute="main_search" extraParams='{ "type": "scvo-cms-post" }'}}
+                    {{> wee_search title="Search posts" searchRoute="main_search" extraParams='{ "type": "scvo-cms-post" }'}}
                     {{#if primaryResponse.hits.hits.[0]._source.is_press_release}}
                     <ul class="supplimentary-list">
                         {{#each supplimentaryResponses.category_posts.hits.hits}}
