--- a/functions/test-db/json2/scvo/templates/staff-list-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-list-head-tags.hbs
@@ -1,12 +1,7 @@
 {{#if primaryResponse.hits.hits.[0]}}
     {{#with primaryResponse.hits.hits.[0]._source}}
-        {{#ifAny title og_title}}
-            <title>SCVO - {{{default title og_title}}}</title>
-            <meta property="og:title" content="SCVO - {{{default title og_title}}}" data-dynamic="true">
-        {{else}}
-            <title>SCVO</title>
-            <meta property="og:title" content="SCVO" data-dynamic="true">
-        {{/ifAny}}
+        <title>SCVO – Staff directory</title>
+        <meta property="og:title" content="SCVO – Staff directory" data-dynamic="true">
 
         {{#ifAny og_image ../og_image}}
             <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
@@ -16,11 +11,14 @@
             <meta property="og:summary" content="{{default og_summary (default ../og_summary (default description ../description))}}" data-dynamic="true">
             <meta name="description" content="{{default description (default ../description (default og_summary ../og_summary))}}" data-dynamic="true">
         {{/ifAny}}
-        
+
         {{#if rendered.json_ld}}
             <script type="application/ld+json" data-dynamic="true">
                 {{{rendered.json_ld}}}
             </script>
         {{/if}}
     {{/with}}
+{{else}}
+    <title>SCVO – Scottish Council for Voluntary Organisations</title>
+    <meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
 {{/if}}
