--- a/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
@@ -20,7 +20,7 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/policy-research">Policy &amp; research</a></li>
-            <li><a href="/policy-research/evidence-library">Evidence library</a></li>
+            <li><a href="/policy-research/evidence-library">Evidence Library</a></li>
             <li>{{{primaryResponse.hits.hits.[0]._source.title}}}</li>
         </ul>
         <div class="mdc-layout-grid">
