--- a/functions/test-db/json2/scvo/templates/post-category.hbs
+++ b/functions/test-db/json2/scvo/templates/post-category.hbs
@@ -30,7 +30,7 @@
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </ul>
-                    {{> pagination paging=paging params=params}}
+                    {{> pagination}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
                     <!-- TBC -->
