--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -34,6 +34,6 @@
             {{/if}}
         </div>
         {{/each}}
-        {{> pagination paging=paging params=params}}
+        {{> pagination}}
     </div>
 </div>
