--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -293,7 +293,7 @@ site-background: #251032
     .post-info .post-info-categories .inline-list li a,
     .pagination li.current-page,
     .mdc-theme--primary-bg {
-        background-color: map-get($theme, 'primary');
+        background-color: map-get($theme, 'primary') !important;
     }
     body,
     .mdc-theme--site-bg {
@@ -1310,7 +1310,7 @@ a:hover {
     .splash-image.hello .splash-overlay,
     .splash-image.hello {
         height: 40vh;
-        min-height: 300px;
+        min-height: 350px;
     }
     .splash-image.hello {
         .container-fluid {
@@ -1319,7 +1319,7 @@ a:hover {
                 margin-left: 5%;
                 width: 39%;
                 h1.header-text {
-                    font-size: 5rem;
+                    font-size: 4.8rem;
                     line-height: 4rem;
                 }
             }
@@ -2066,7 +2066,35 @@ footer {
     }
 }
 
+@media screen and (max-width: 1340px) {
+    .home {
+        .splash-image.hello .container-fluid .mdc-layout-grid h1.header-text {
+            font-size: 4rem;
+            line-height: 3.5rem;
+        }
+        .splash-image p.header-extra {
+            font-size: 1.4rem;
+            padding-bottom: $spacing-unit/2;
+        }
+    }
+}
+
 @media screen and (max-width: 1140px) {
+    .home {
+        .splash-image.hello .container-fluid {
+            .mdc-layout-grid {
+                width: 60%;
+                h1.header-text {
+                    font-size: 3.8rem;
+                    line-height: 3.4rem;
+                }
+                p.header-extra {
+                    font-size: 1.3rem;
+                    padding: $spacing-unit/2 0;
+                }
+            }
+        }
+    }
     .mdc-toolbar.mdc-toolbar--fixed {
         padding-top: 0;
     }
@@ -2147,6 +2175,9 @@ footer {
         font-size: 0.92rem;
         line-height: 1.25;
     }
+    .home .splash-image.hello .container-fluid .mdc-layout-grid p.header-extra {
+        font-size: 1.2rem;
+    }
     .breadcrumbs {
         font-size: 85%;
     }
@@ -2165,11 +2196,18 @@ footer {
     }
 }
 
+@media screen and (max-width: 479px) {
+    .home .featured-content .featured-background-image img.header-text {
+        margin-right: 0
+    }
+}
+
 @media screen and (max-width: 450px) {
     .pagination-distance-4 {
         display: none !important;
     }
     .splash-overlay {
+        min-height: 290px;
         h1.header-text {
             font-size: 2rem;
             line-height: 2.2rem;
@@ -2177,6 +2215,10 @@ footer {
     }
     .home .splash-image.hello {
         padding: 0;
+        min-height: 290px;
+        .splash-overlay {
+            min-height: 290px;
+        }
         .container-fluid .mdc-layout-grid {
             width: 100%;
             margin: 0;
@@ -2186,6 +2228,7 @@ footer {
             }
             p.header-extra {
                 font-size: 1.1rem;
+                margin-bottom: 0;
             }
         }
     }
