--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -76,7 +76,7 @@
             <aside class="mdc-temporary-drawer" id="menu_drawer" dir="rtl">
                 <nav class="mdc-temporary-drawer__drawer">
                     <header class="mdc-temporary-drawer__header">
-                        <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg mdc-theme--text-primary-on-primary">
+                        <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg">
                             <img src="assets/images/scvo-logo.png" />
                         </div>
                     </header>
