--- a/functions/test-db/json2/scvo/templates/posts-page.hbs
+++ b/functions/test-db/json2/scvo/templates/posts-page.hbs
@@ -26,7 +26,7 @@
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </ul>
-                    {{> pagination paging=paging params=params}}
+                    {{> pagination}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
                     {{#with primaryResponse.hits.hits.[0]._source}}
