--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -502,6 +502,7 @@ site-background: #251032
 }
 .services,
 .search-result.scvo-cms-page,
+.search-result.scvo-event,
 .breadcrumbs,
 .page-content,
 .posts-page .page-sidebar,
