--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -972,6 +972,7 @@ a:hover {
                     padding: 0 $spacing-unit/2;
                     line-height: $spacing-unit*2;
                     background: transparent;
+                    border-radius: 0 !important;
                 }
                 ::-webkit-input-placeholder {
                     color: rgba(255, 255, 255, 0.6);
@@ -1022,11 +1023,20 @@ a:hover {
                     display: none;
                 }
             }
+            #main-tab-bar {
+                .mdc-tab.mdc-tab--active {
+                    // border-bottom: 1px solid rgba(255,255,255,0.5);
+                    // background: rgba(0,0,0,0.2);
+                }
+            }
             #upper-tab-bar {
                 margin-right: $spacing-unit;
                 .mdc-tab {
                     min-width: auto;
                     font-weight: 600;
+                }
+                .mdc-tab.mdc-tab--active {
+                    // border-bottom: 1px solid rgba(255,255,255,0.5);
                 }
             }
         }
