--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -23,7 +23,7 @@
         <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
                 {{#each primaryResponse.hits.hits}}
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                     {{#if _source.rendered.search_result_scvo}}
                     {{{_source.rendered.search_result_scvo}}}
                     {{else}}
