--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -245,6 +245,7 @@ site-background: #251032
         border-color: map-get($theme, 'primary');
     }
     .mdc-button:hover,
+    .mdc-button--raised.mdc-button--active:not(:disabled),
     .mdc-button--raised:not(:disabled):hover {
         color: white;
         border-color: map-get($theme, 'primary-dark');
@@ -395,7 +396,7 @@ site-background: #251032
         map-get($themeServices, 'primary-fade')
         ),
         url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-03.jpg');
-        .mdc-layout-grid__cell--span-4 h3 a:hover .fa {
+        .mdc-layout-grid__cell h3 a:hover .fa {
             background-color: map-get($themeServices, 'primary') !important;
         }
     }
@@ -510,6 +511,7 @@ site-background: #251032
 .library-content,
 .library-sidebar,
 .home .cta-content,
+.home .featured-text,
 .home .latest-content,
 .home .gist.scvo-cms-post,
 .home .gist.goodmoves-job,
@@ -723,6 +725,27 @@ a:hover {
 
 .home {
     .featured-content {
+        .search_form {
+            margin-left: 5%;
+            margin-right: 5%;
+            .mdc-text-field {
+                border: 2px solid #333;
+                border-radius: 0;
+                width: 100%;
+                height: 1.5rem;
+                line-height: 2rem;
+                margin: 1.5rem 0 1rem;
+                padding: 1rem;
+                font-size: 1.5rem;
+            }
+        }
+        .search-button-large {
+            padding: 1.8rem 0 0;
+            float: right;
+            .fa-search {
+                color: #333;
+            }
+        }
         .featured {
             h1,
             p {
@@ -779,8 +802,11 @@ a:hover {
         h2 {
             font-size: 1.8rem;
         }
-        .mdc-layout-grid__cell--span-4 {
+        .mdc-layout-grid__cell {
             text-align: center;
+            h2 {
+                text-align: left;
+            }
             h3 {
                 margin: 0;
                 .fa {
@@ -1541,7 +1567,7 @@ h1.mdc-typography--title {
     // }
 }
 .mdc-card__primary:last-child {
-    padding-bottom: 0;
+    padding-bottom: 1rem;
 }
 .mdc-card-search {
     margin: 0 0 $spacing-unit;
