--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -22,19 +22,20 @@
 
 <section class="featured-content">
     <div class="container-fluid">
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <h1 style="text-align:center;">[ this is a new website in development ]</h1>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
-        <p>&nbsp;</p>
+        <form [searchroute]="'main_search'" class="search_form">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-11">
+                    <div class="mdc-textfield">
+                        <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search SCVO, Goodmoves, TFN, and more" id="q" name="q">
+                    </div>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+                    <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
+                        <span class="fa fa-3x fa-search" aria-hidden="true"></span>
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
     {{#each supplimentaryResponses.featured.hits.hits}}
     <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}>
@@ -54,7 +55,7 @@
                         Find information on...
                     </h2>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-12-tablet">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet">
                     <h3>
                         <a href="/setting-up-a-charity">
                             <span class="fa fa-3x fa-file-text" aria-hidden="true"></span>
@@ -62,7 +63,7 @@
                         </a>
                     </h3>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-12-tablet">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet">
                     <h3>
                         <a href="/funding">
                             <span class="fa fa-3x fa-money" aria-hidden="true"></span>
@@ -70,7 +71,15 @@
                         </a>
                     </h3>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-12-tablet">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet">
+                    <h3>
+                        <a href="/services/events">
+                            <span class="fa fa-3x fa-users" aria-hidden="true"></span>
+                            <span class="underline">Training courses &amp; events</span>
+                        </a>
+                    </h3>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet">
                     <h3>
                         <a href="/jobs">
                             <span class="fa fa-3x fa-address-card" aria-hidden="true"></span>
