--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -2269,6 +2269,9 @@ footer {
             }
         }
     }
+    .home .featured-content .search_form {
+        margin: 0;
+    }
 }
 
 @media screen and (max-width: 395px) {
