--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -24,12 +24,12 @@
     <div class="container-fluid">
         <form [searchroute]="'main_search'" class="search_form">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-11">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-11-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-9-tablet">
                     <div class="mdc-textfield">
                         <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search SCVO, Goodmoves, TFN, and more" id="q" name="q">
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-phone">
                     <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                         <span class="fa fa-3x fa-search" aria-hidden="true"></span>
                     </button>
