Members area update and menus fixes

--- a/functions/test-db/json2/scvo/sass/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/sass/scvo-styles.scss
@@ -502,6 +502,7 @@ site-background: #251032
     @include theme-colours('digital');
 }
 .services,
+.events,
 .search-result.scvo-cms-page,
 .search-result.scvo-event,
 .breadcrumbs,
@@ -518,139 +519,6 @@ site-background: #251032
 .home .gist.tfn-post {
     @include theme-colours('services');
 }
-
-
-
-//
-// :root{
-//     --mdc-theme-primary: #AD1457; // Pink 800
-//     --mdc-theme-primary-fade: rgba(173, 20, 87, 0.89);
-//     --mdc-theme-primary-light: #C2185B; // Pink 700
-//     --mdc-theme-primary-dark: #880E4F; // Pink 900
-//     --mdc-theme-secondary: #FF8F00; // Amber 800
-//     --mdc-theme-secondary-light: #FFA000; // Amber 700
-//     --mdc-theme-secondary-dark: #FF6F00; // Amber 900
-//     --mdc-theme-background: #ECEFF1; // Blue Grey 50
-//     --mdc-footer-primary: #371448;
-//     --mdc-footer-primary-highlight: #B3185B;
-//     --mdc-footer-primary-light: #592864;
-//     --mdc-footer-primary-dark: #251032;
-//     --mdc-site-background: #290b4d; // was #263238 Blue Grey 900
-//     --mdc-layout-grid-margin-desktop: 0;
-//     --mdc-layout-grid-margin-tablet: 0;
-// }
-// .running-a-charity,
-// .setting-up-a-charity,
-// .running-your-organisation {
-//     --mdc-theme-primary: #4527A0; // Deep Purple 800
-//     --mdc-theme-primary-fade: rgba(69, 39, 160, 0.89);
-//     --mdc-theme-primary-light: #512DA8; // Deep Purple 700
-//     --mdc-theme-primary-dark: #311B92; // Deep Purple 900
-// }
-// .search-result.cjs-job,
-// .employability,
-// .employment,
-// .jobs {
-//     --mdc-theme-primary: #2E7D32; // Green 800
-//     --mdc-theme-primary-fade: rgba(46, 125, 50, 0.89);
-//     --mdc-theme-primary-light: #388E3C; // Green 700
-//     --mdc-theme-primary-dark: #1B5E20; // Green 900
-// }
-// .goodmoves,
-// .search-result.goodmoves-job,
-// .services.goodmoves {
-//     --mdc-theme-primary: #58a934;
-//     --mdc-theme-primary-fade: #58a934;
-//     --mdc-theme-primary-light: #58a934;
-//     --mdc-theme-primary-dark: #58a934;
-// }
-// .funding {
-//     --mdc-theme-primary: #00838F; // Cyan 800
-//     --mdc-theme-primary-fade: rgba(0, 131, 143, 0.89);
-//     --mdc-theme-primary-light: #008D9B; // Cyan 750
-//     --mdc-theme-primary-dark: #006064; // Cyan 900
-// }
-// .project,
-// .campaign,
-// .open-government,
-// .projects-campaigns {
-//     --mdc-theme-primary: #AD1457; // Pink 800
-//     --mdc-theme-primary-fade: rgba(173, 20, 87, 0.89);
-//     --mdc-theme-primary-light: #C2185B; // Pink 700
-//     --mdc-theme-primary-dark: #880E4F; // Pink 900
-// }
-// .digital .callout-image,
-// .post,
-// .blogs,
-// .press-media,
-// .policy-research {
-//     --mdc-theme-primary: #D84315; // Deep Orange 800
-//     --mdc-theme-primary-fade: rgba(216, 67, 21, 0.89);
-//     --mdc-theme-primary-light: #E64A19; // Deep Orange 700
-//     --mdc-theme-primary-dark: #BF360C; // Deep Orange 900
-// }
-// .goodhq,
-// .search-result.goodhq-organisation {
-//     --mdc-theme-primary: #4033E9;
-//     --mdc-theme-primary-fade: #4033E9;
-//     --mdc-theme-primary-light: #4033E9;
-//     --mdc-theme-primary-dark: #160AAD;
-// }
-// .search-result.digital-charter-signatory {
-//     --mdc-theme-primary: #022347;
-//     --mdc-theme-primary-fade: #022347;
-//     --mdc-theme-primary-light: #022347;
-//     --mdc-theme-primary-dark: #022347;
-// }
-// .tfn,
-// .post-related-tfn,
-// .gist.tfn-post,
-// .search-result.tfn-post {
-//     --mdc-theme-primary: #3b9db1;
-//     --mdc-theme-primary-fade: #3b9db1;
-//     --mdc-theme-primary-light: #3b9db1;
-//     --mdc-theme-primary-dark: #3b9db1;
-// }
-// .funding-scotland,
-// .search-result.funding-scotland-fund,
-// .services.funding-scotland {
-//     --mdc-theme-primary: #6FB744;
-//     --mdc-theme-primary-fade: #6FB744;
-//     --mdc-theme-primary-light: #6FB744;
-//     --mdc-theme-primary-dark: #6FB744;
-// }
-// .credit-union {
-//     --mdc-theme-primary: #1976D2;
-//     --mdc-theme-primary-fade: rgba(21, 101, 192, 0.89);
-//     --mdc-theme-primary-light: #1976D2;
-//     --mdc-theme-primary-dark: #145ea8;
-// }
-// .digital {
-//     --mdc-theme-primary: #1976d2;
-//     --mdc-theme-primary-fade: rgba(13, 71, 161, 0.89);
-//     --mdc-theme-primary-light: #1976D2;
-//     --mdc-theme-primary-dark: #0D47A1;
-// }
-// .services,
-// .breadcrumbs,
-// .page-content,
-// .page-sidebar,
-// .post-content,
-// .post-sidebar,
-// .library-content,
-// .library-sidebar,
-// .home .cta-content,
-// .home .latest-content,
-// .home .gist.scvo-cms-post,
-// .home .gist.goodmoves-job,
-// .home .gist.tfn-post {
-//     --mdc-theme-primary: #1565C0; // Blue 800
-//     --mdc-theme-primary-fade: rgba(21, 101, 192, 0.89);
-//     --mdc-theme-primary-light: #1976D2; // Blue 700
-//     --mdc-theme-primary-dark: #0D47A1; // Blue 900
-// }
-
-
 
 html {
     overflow-y: scroll;
