--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -73,7 +73,7 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell--span-12-tablet">
                     <h3>
-                        <a href="/services/events">
+                        <a href="/events">
                             <span class="fa fa-3x fa-users" aria-hidden="true"></span>
                             <span class="underline">Training courses &amp; events</span>
                         </a>
