--- a/functions/test-db/json2/scvo/templates/member.hbs
+++ b/functions/test-db/json2/scvo/templates/member.hbs
@@ -24,7 +24,7 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About SCVO</a></li>
-            <li><a href="/about/members">Members</a></li>
+            <li><a href="/about/members">Our members</a></li>
             {{#if primaryResponse.hits.hits.[0]}}
             <li>{{primaryResponse.hits.hits.[0]._source.title}}</li>
             {{else}}
