--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -387,7 +387,7 @@ site-background: #251032
             66deg,
             map-get($theme, 'primary-fade'),
             map-get($theme, 'primary-fade')
-            ) !important;
+            );
         }
     }
     .home .cta-content.callout-image {
@@ -1232,7 +1232,7 @@ a:hover {
     }
 }
 .credit-union .splash-image {
-    min-height: $spacing-unit*11;
+    min-height: $spacing-unit*9;
     img.header-text {
         max-height: $spacing-unit*6;
     }
@@ -2111,18 +2111,15 @@ footer {
     .pagination-distance-4 {
         display: none !important;
     }
-    .splash-overlay {
-        min-height: 290px;
-        h1.header-text {
-            font-size: 2rem;
-            line-height: 2.2rem;
-        }
-    }
     .home .splash-image.hello {
         padding: 0;
         min-height: 290px;
         .splash-overlay {
             min-height: 290px;
+            h1.header-text {
+                font-size: 2rem;
+                line-height: 2.2rem;
+            }
         }
         .container-fluid .mdc-layout-grid {
             width: 100%;
