--- a/functions/test-db/json2/scvo/templates/credit-union-loan-calculator.hbs
+++ b/functions/test-db/json2/scvo/templates/credit-union-loan-calculator.hbs
@@ -28,59 +28,61 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
-                    <form class="form-horizontal loan-form" name="loanDetails" id="loanDetails" _lpchecked="1">
-                        <div class="control-group">
-                            <label class="control-label">
-                                How long would you like to repay the loan?<br>
-                                <small>(from 1 month up to 36 months)</small>
-                            </label>
-                            <div class="controls">
-                                <input style="width: 75px;" type="text" name="expectedRepaymentTerm" id="expectedRepaymentTerm" onchange="window.displayRepayment()">
+                    <div class="full scvo-cms scvo-cms-page">
+                        <form class="form-horizontal loan-form" name="loanDetails" id="loanDetails" _lpchecked="1">
+                            <div class="control-group">
+                                <label class="control-label">
+                                    How long would you like to repay the loan?<br>
+                                    <small>(from 1 month up to 36 months)</small>
+                                </label>
+                                <div class="controls">
+                                    <input style="width: 75px;" type="text" name="expectedRepaymentTerm" id="expectedRepaymentTerm" onchange="window.displayRepayment()">
+                                </div>
                             </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label">How much would you like to borrow?</label>
-                            <div class="controls">
-                                £ <input style="width: 75px;" type="text" name="sumLent" id="sumLent" onchange="window.displayRepayment()">
+                            <div class="control-group">
+                                <label class="control-label">How much would you like to borrow?</label>
+                                <div class="controls">
+                                    &pound; <input style="width: 75px;" type="text" name="sumLent" id="sumLent" onchange="window.displayRepayment()">
+                                </div>
                             </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label">Installments:</label>
-                            <div class="controls">
-                                £ <input style="width: 75px;" type="text" name="meanRepayment" id="meanRepayment" onchange="window.calculateMaxLoan()">
-                                each <input style="width: 75px;" type="text" name="rPeriodDisp" id="rPeriodDisp">
+                            <div class="control-group">
+                                <label class="control-label">Installments:</label>
+                                <div class="controls">
+                                    &pound; <input style="width: 75px;" type="text" name="meanRepayment" id="meanRepayment" onchange="window.calculateMaxLoan()">
+                                    each <input style="width: 75px;" type="text" name="rPeriodDisp" id="rPeriodDisp">
+                                </div>
                             </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label">
-                                Total repaid:<br>
-                                <small>(amount borrowed + interest)</small>
-                            </label>
-                            <div class="controls">
-                                £ <input style="width: 75px;" type="text" name="totalRepaid" id="totalRepaid">
+                            <div class="control-group">
+                                <label class="control-label">
+                                    Total repaid:<br>
+                                    <small>(amount borrowed + interest)</small>
+                                </label>
+                                <div class="controls">
+                                    &pound; <input style="width: 75px;" type="text" name="totalRepaid" id="totalRepaid">
+                                </div>
                             </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label">Total cost of loan (interest):</label>
-                            <div class="controls">
-                                £ <input style="width: 75px;" type="text" name="totalInterest" id="totalInterest">
+                            <div class="control-group">
+                                <label class="control-label">Total cost of loan (interest):</label>
+                                <div class="controls">
+                                    &pound; <input style="width: 75px;" type="text" name="totalInterest" id="totalInterest">
+                                </div>
                             </div>
-                        </div>
-                        <div class="well">
-                            <h4>Remember...</h4>
-                            <ul>
-                                <li>there are no hidden charges associated with our loans</li>
-                                <li>the interest is charged on the reducing balance daily</li>
-                                <li>there are no penalties for early full or partial repayments</li>
-                                <li>
-                                    there is free loan protection Insurance cover on most of our loans*<br>
-                                    <span style="font-size: 12px; line-height: normal;">
-                                        (* subject to certain restrictions – please ask the Credit Union office for more details)
-                                    </span>
-                                </li>
-                            </ul>
-                        </div>
-                    </form>
+                            <div class="well">
+                                <h4>Remember&hellip;</h4>
+                                <ul>
+                                    <li>there are no hidden charges associated with our loans</li>
+                                    <li>the interest is charged on the reducing balance daily</li>
+                                    <li>there are no penalties for early full or partial repayments</li>
+                                    <li>
+                                        there is free loan protection Insurance cover on most of our loans*<br>
+                                        <span style="font-size: 12px; line-height: normal;">
+                                            (* subject to certain restrictions – please ask the Credit Union office for more details)
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 content sidebar page-sidebar">
                     {{> menu_credit_union}}
