--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -41,7 +41,7 @@
                             </span>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end toolbar-search">
-                            <nav id="upper-tab-bar" class="mdc-tab-bar" [menu]="'upper'" [menutemplate]="'%3Ca%20class%3D%22mdc-tab%20%7B%7Bactive%7D%7D%22%20href%3D%22%7B%7Burl%7D%7D%22%3E%7B%7Blabel%7D%7D%3C%2Fa%3E'">
+                            <nav id="upper-tab-bar" class="mdc-tab-bar" [menu]="'upper'">
                                 {{#each menus.upper}}
                                 <a class="mdc-tab{{#if match}} mdc-tab--active{{/if}}" href="{{path}}">{{{label}}}</a>
                                 {{/each}}
