--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,3 @@
-<p>
-  menu works!
-</p>
+<span #menuContainer class="menu-container" dynamic-component [componentTemplate]="html" [componentContext]="this" [componentModules]="modules">
+    <ng-content></ng-content>    
+</span>
