--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2015,9 +2015,9 @@ footer {
     .mdc-toolbar-fixed-adjust {
         padding-top: 130px;
     }
-    .mdc-toolbar .mdc-toolbar__row .container-fluid #upper-tab-bar {
-        margin-right: 0;
-    }
+    // .mdc-toolbar .mdc-toolbar__row .container-fluid #upper-tab-bar {
+    //     margin-right: 0;
+    // }
     .mdc-toolbar .mdc-toolbar__row .container-fluid .mdc-tab-bar .mdc-tab {
         padding: 0 $spacing-unit/2;
     }
