--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -104,7 +104,7 @@
                     {{{_source.rendered.gist}}}
                     {{/each}}
                     <h2>
-                        <a href="/blogs">Read more</a>
+                        <a href="/blogs">Read more SCVO blogs</a>
                     </h2>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
@@ -115,7 +115,7 @@
                     {{{_source.rendered.gist}}}
                     {{/each}}
                     <h2>
-                        <a href="http://thirdforcenews.org.uk">Read more</a>
+                        <a href="http://thirdforcenews.org.uk">Read more on TFN</a>
                     </h2>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
