Improved side menu stylings

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1578,6 +1578,11 @@ h1.mdc-typography--title {
     .mdc-card {
         .mdc-button {
             margin-top: 0;
+            border: none;
+            box-shadow: none;
+            text-align: left;
+            background-color: rgba(0,0,0,0.05);
+            padding-top: 2px;
         }
     }
     .mdc-card__actions ul,
