Fixed mobile menu close on home issue

--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -82,7 +82,7 @@
                     </header>
                     <nav class="mdc-temporary-drawer__content mdc-list-group">
                         <div id="icon-with-text-demo" class="mdc-list">
-                            <a class="mdc-list-item" href="/">Home</a>
+                            <a class="mdc-list-item" href="/" onclick="window.drawer.open = false">Home</a>
                             {{#each menus.main}}
                             <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">
                                 {{{label}}}
