--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1465,24 +1465,24 @@ h1.mdc-typography--title {
         background: white;
         border-width: $spacing-unit/8;
         border-style: solid;
-        margin-top: $spacing-unit;
+        // margin-top: $spacing-unit;
         text-transform: none;
         background: transparent;
     }
     .scvo-cms-page-20114 .mdc-button {
         margin-top: 0;
     }
-    .menu-sidebar,
-    .mdc-card {
-        .mdc-button {
-            margin-top: 0;
-            border: none;
-            box-shadow: none;
-            text-align: left;
-            background-color: rgba(0,0,0,0.05);
-            padding-top: 2px;
-        }
-    }
+    // .menu-sidebar,
+    // .mdc-card {
+    //     .mdc-button {
+    //         margin-top: 0;
+    //         border: none;
+    //         box-shadow: none;
+    //         text-align: left;
+    //         background-color: rgba(0,0,0,0.05);
+    //         padding-top: 2px;
+    //     }
+    // }
     .mdc-card__actions ul,
     ul.supplimentary-list,
     ul.inline-list {
