Updated goodmoves config

--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -14,7 +14,7 @@
                         <option value="scvo-cms-post" {{#compare params.query.type "===" "scvo-cms-post"}}selected{{/compare}}>Blog posts</option>
                         <option value="scvo-cms-page" {{#compare params.query.type "===" "scvo-cms-page"}}selected{{/compare}}>Pages</option>
                         <option value="scvo-event" {{#compare params.query.type "===" "scvo-event"}}selected{{/compare}}>Training &amp; events</option>
-                        <option value="goodmoves-legacy" {{#compare params.query.type "===" "goodmoves-legacy"}}selected{{/compare}}>Goodmoves jobs</option>
+                        <option value="goodmoves-job" {{#compare params.query.type "===" "goodmoves-job"}}selected{{/compare}}>Goodmoves jobs</option>
                     </select>
                 </div>
             </form>
