--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -790,6 +790,7 @@ a:hover {
                     padding: 0 $spacing-unit/2;
                     margin: 0;
                     line-height: $nav-height - 3px;
+                    height: $nav-height - 3px;
                     background: transparent;
                     border-radius: 0 !important;
                 }
@@ -819,6 +820,7 @@ a:hover {
             .search_form {
                 position: relative;
                 .mdc-toolbar__search {
+                    background-color: transparent;
                     position: absolute;
                     right: $spacing-unit/2;
                     bottom: $spacing-unit*2;
@@ -832,11 +834,13 @@ a:hover {
                 .mdc-tab {
                     color: rgba(255, 255, 255, 0.95);
                     font-size: 1rem;
+                    min-height: $nav-height;
                     height: $nav-height;
                     font-weight: 600;
                     padding: 0 $spacing-unit*(3/4);
                     .mdc-tab--label {
                         line-height: $nav-height - 4px;
+                        height: $nav-height - 4px;
                         display: block;
                         border-top: 2px solid transparent;
                         border-bottom: 2px solid transparent;
@@ -1213,6 +1217,13 @@ a:hover {
 .mdc-card__subtitle {
     font-weight: 600;
 }
+.mdc-button {
+    outline: none;
+}
+.mdc-button.mdc-button--raised.pull-right {
+    margin-top: $spacing-unit;
+}
+
 .mdc-card__subtitle .post-info-item {
     font-weight: 500;
 }
